--- a/main_style.css
+++ b/main_style.css
@@ -17,6 +17,13 @@ p, h2 {
 	font-family: Helvetica, sans-serif;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 #block {
 	margin-left: 50px;
 	margin-right: 50px;
