--- a/main_style.css
+++ b/main_style.css
@@ -24,6 +24,10 @@ p, h2 {
   width: 50%;
 }
 
+.censored {
+	background-color:black;
+	user-select: none;	
+}
 #block {
 	margin-left: 50px;
 	margin-right: 50px;
