--- a/main_style.css
+++ b/main_style.css
@@ -27,7 +27,13 @@ p, h2 {
 .censored {
 	background-color:black;
 	user-select: none;	
+	color: black;
 }
+
+.alinea {
+	margin-left: 20px;
+}
+
 #block {
 	margin-left: 50px;
 	margin-right: 50px;
@@ -66,6 +72,17 @@ p, h2 {
   overflow: auto;
 }
 
+.note {
+	margin-left: 15px;
+	font-family: Courier Prime, sans-serif;
+	color: darkblue;
+}
+
+.post {
+	margin-left: 15px;
+	margin-right: 15px;
+	background-color: pink;
+}
 a.button {
     padding: 1px 6px;
     border: 1px outset buttonborder;
